--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -508,7 +508,7 @@ h5 {
     margin: 0;
     font-size: 40px;
     font-weight: bold;
-    color: #191c1f;
+    color: #00124c;
     text-transform: uppercase;
     line-height: 1; }
 .hero-dot
